--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -18,4 +18,12 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}*/
+
+body {
+  color: #ededed;
+  background: #0a0a0a;
+  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+  font-family: "Calibri", sans-serif;
 }
